tests/paczka1/fuzzy1/25812652.err
Error in line 9: jEI S591 12,0
Error in line 19: 2Mks A7k 94,3
Error in line 23: bgP0P A75 93,7
Error in line 35: gIRUJS A817 44,4
Error in line 36: gIRUJS A75 83,2
Error in line 37: gIRUJS A817 49,8
